--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
       "@/*": [
         "src/*"
       ],
+      "@packages*": [
+        "packages/*"
+      ],
       "survey-vue": [
         "survey-vue/src/entries/vue"
       ]
